Refined LandingPage.jsx, moved text from footer into buttons, started working on the footer, ensured that the background covers the entire height of the screen at any time. Added diacritics.

--- a/orarubb-web_frontend/src/App.scss
+++ b/orarubb-web_frontend/src/App.scss
@@ -6,7 +6,8 @@
   flex-direction: column;
 }
 
-body, #root {
-  min-height: 100vh;
-  display: flex;
+html, body {
+  margin: 0;
+  padding: 0;
+  height: 100%; /* Ensures the root elements fill the viewport */
 }
